fixed wrapping long lines in code

--- a/designs/clean/ui/common.less
+++ b/designs/clean/ui/common.less
@@ -252,4 +252,5 @@ pre code {
   line-height: 1.5;
   border: 1px solid #ccc;
   padding: 10px;
+  white-space: pre-wrap;
 }
